# CMake-Project-Template

./: CMakeLists.txt  Readme.md
.conan/: build.py
.conan/test_package/: CMakeLists.txt
.github/workflows/: ci.yml  docs.yml
cmake/: <Project>Config.cmake  <Project>Flags.cmake
docs/: conf.py  index.rst
docs/website/: version-selector.js
src/: CMakeLists.txt
tests/: CMakeLists.txt
